package edu.kit.iti.formal.stvs.model.code;

/**
 * Created by philipp on 09.01.17.
 */
public class FoldableCodeBlock {

    private int startLine;
    private int endLine;

    public int getStartLine() {
        return startLine;
    }

    public int getEndLine() {
        return endLine;
    }
}
